--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,13 @@
 .App {
-  text-align: center;
+  /* text-align: center; */
+  font-family: 'Sarabun', sans-serif;
+  height: 100vh;
+  width: 100vw;
+  background-color: #ffffff;
 }
 
-.App-logo {
+
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
@@ -35,4 +40,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
